<project>
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.opengeo</groupId>
  <artifactId>geonode-geoserver-ext</artifactId>
  <packaging>jar</packaging>
  <version>2.7-SNAPSHOT</version>
  <name>GeoNode GeoServer Extensions</name>

  <distributionManagement>
    <repository>
      <id>opengeo</id>
      <name>OpenGeo Maven Repository</name>
      <url>dav:http://repo.opengeo.org</url>
      <uniqueVersion>false</uniqueVersion>
    </repository>
    <snapshotRepository>
      <id>opengeo</id>
      <name>OpenGeo Maven Repository</name>
      <url>dav:http://repo.opengeo.org</url>
      <uniqueVersion>false</uniqueVersion>
    </snapshotRepository>
  </distributionManagement>

  <repositories>
  
    <repository>
      <id>boundless</id>
      <name>Boundless Maven Repository</name>
      <url>http://repo.boundlessgeo.com/main</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
    
    <repository>
      <id>osgeo</id>
      <name>Open Source Geospatial Foundation Repository</name>
      <url>http://download.osgeo.org/webdav/geotools/</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>

    <repository>
      <id>maven-restlet</id>
      <name>Restlet Maven Repository</name>
      <url>http://maven.restlet.org</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  
    <repository>
      <id>org.mapfish</id>
      <url>http://dev.mapfish.org/maven/repository</url>
    </repository>

  </repositories>
  
  <pluginRepositories>
    <pluginRepository>
      <id>codehaus-snapshot-plugins</id>
      <name>codehaus-shapshot-plugins</name>
      <url>http://snapshots.repository.codehaus.org/</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <releases>
        <enabled>false</enabled>
       </releases>
    </pluginRepository>
  </pluginRepositories>

  <dependencies>
    <dependency>
      <groupId>org.geoserver</groupId>
      <artifactId>gs-rest</artifactId>
      <version>${geoserver.version}</version>
    </dependency>
    <dependency>
      <groupId>org.geoserver.web</groupId>
      <artifactId>gs-web-sec-core</artifactId>
      <version>${geoserver.version}</version>
    </dependency>
    
    <!--
    <dependency>
      <groupId>org.geoserver.community</groupId>
      <artifactId>gs-sldService</artifactId>
      <version>${geoserver.version}</version>
    </dependency>
    -->

    <dependency>
      <groupId>org.geoserver.extension</groupId>
      <artifactId>gs-printing</artifactId>
      <version>${geoserver.version}</version>
      <exclusions>
        <exclusion>
          <groupId>xerces</groupId>
          <artifactId>xercesImpl</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.geoserver</groupId>
      <artifactId>gs-restconfig</artifactId>
      <version>${geoserver.version}</version>
    </dependency>
    <dependency>
      <groupId>org.geoserver.extension</groupId>
      <artifactId>gs-web-wps</artifactId>
      <version>${geoserver.version}</version>
    </dependency>
    <dependency>
      <groupId>xerces</groupId>
      <artifactId>xercesImpl</artifactId>
      <version>2.7.1</version>
    </dependency>
    <dependency>
      <groupId>org.geoserver.extension</groupId>
      <artifactId>gs-excel</artifactId>
      <version>${geoserver.version}</version>
    </dependency>
    <dependency>
      <groupId>org.geoserver.community</groupId>
      <artifactId>gs-jdbcconfig</artifactId>
      <version>${geoserver.version}</version>
    </dependency>
    <!--dependency>
      <groupId>org.geoserver.community</groupId>
      <artifactId>ftp</artifactId>
      <version>${geoserver.version}</version>
    </dependency-->
    <dependency>
      <groupId>org.geoserver.web</groupId>
      <artifactId>gs-web-app</artifactId>
      <type>jar</type>
      <version>${geoserver.version}</version>
      <scope>runtime</scope>
		<exclusions>
		  <exclusion>
		    <groupId>net.sf.json-lib</groupId>
		    <artifactId>json-lib</artifactId>
		  </exclusion>
		</exclusions>
    </dependency>
    <dependency>
      <groupId>commons-httpclient</groupId>
      <artifactId>commons-httpclient</artifactId>
      <version>3.1</version>
    </dependency>

    <dependency>
        <groupId>org.geoserver.importer</groupId>
        <artifactId>gs-importer-core</artifactId>
        <version>${geoserver.version}</version>
        <scope>runtime</scope>
    </dependency>
    <dependency>
        <groupId>org.geoserver.importer</groupId>
        <artifactId>gs-importer-web</artifactId>
        <version>${geoserver.version}</version>
        <scope>runtime</scope>
    </dependency>
   
    <dependency>
        <groupId>org.geoserver.importer</groupId>
        <artifactId>gs-importer-rest</artifactId>
        <version>${geoserver.version}</version>
        <scope>runtime</scope>
    </dependency>

<!--
   This was discontinued from the opengeo repo for
   geoserver version 2.5. If someone is able to get a 2.5.1
   version deployed repo.opengeo.org this can be enabled again.
   Commented out by ingenieroariel on May 29, 2014.

    <dependency>
        <groupId>org.opengeo.data.csv</groupId>
        <artifactId>csv</artifactId>
        <version>${geoserver.version}</version>
        <scope>runtime</scope>
    </dependency>
-->
    <dependency>
      <groupId>org.geoserver.extension</groupId>
      <artifactId>gs-wps-core</artifactId>
      <version>${geoserver.version}</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>org.geotools.xsd</groupId>
      <artifactId>gt-xsd-kml</artifactId>
      <version>${geotools.version}</version>
    </dependency>

    <dependency>
        <groupId>org.opengeo.geoserver</groupId>
        <artifactId>printng</artifactId>
        <version>${geoserver.version}</version>
        <scope>runtime</scope>
    </dependency>

    <dependency>
        <groupId>org.geotools</groupId>
        <artifactId>gt-shapefile</artifactId>
        <version>${geotools.version}</version>
    </dependency>

    <dependency>
        <groupId>org.geotools</groupId>
        <artifactId>gt-metadata</artifactId>
        <version>${geotools.version}</version>
    </dependency>
    
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>16.0.1</version>
    </dependency>

    <!-- GeoJSON module dependencies -->
    <dependency>
      <groupId>net.sf.json-lib</groupId>
      <artifactId>json-lib</artifactId>
      <version>2.2.3</version>
      <classifier>jdk15</classifier>
    </dependency>
    
    <!-- This dependency is temporary in order to hold a fake process while developing the REST process wrapper -->
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt-process</artifactId>
      <version>${geotools.version}</version>
    </dependency>
    
    <dependency>
      <groupId>org.opengeo.geoserver</groupId>
      <artifactId>gs-geogit</artifactId>
      <version>${gsgeogit.version}</version>
      <classifier>shaded-plugin</classifier>
      <exclusions>
        <exclusion><groupId>org.geogit</groupId><artifactId>geogit-core</artifactId></exclusion>
        <exclusion><groupId>org.geogit</groupId><artifactId>geogit-geotools</artifactId></exclusion>
        <exclusion><groupId>org.geogit</groupId><artifactId>geogit-web-api</artifactId></exclusion>
        <exclusion><groupId>com.google.code.findbugs</groupId><artifactId>jsr305</artifactId></exclusion>
        <exclusion><groupId>com.google.guava</groupId><artifactId>guava</artifactId></exclusion>
        <exclusion><groupId>org.geotools</groupId><artifactId>gt-geojson</artifactId></exclusion>
        <exclusion><groupId>org.geotools.jdbc</groupId><artifactId>gt-jdbc-spatialite</artifactId></exclusion>
      </exclusions>
    </dependency>    
        
    <!--  test dependencies  -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.10</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.geoserver</groupId>
      <artifactId>gs-main</artifactId>
      <scope>test</scope>
      <classifier>tests</classifier>
      <version>${geoserver.version}</version>
    </dependency>
    <dependency>
      <groupId>org.geoserver.web</groupId>
      <artifactId>gs-web-core</artifactId>
      <scope>test</scope>
      <classifier>tests</classifier>
      <version>${geoserver.version}</version>
    </dependency>
    <dependency>
      <groupId>com.mockrunner</groupId>
      <artifactId>mockrunner</artifactId>
      <version>0.3.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt-sample-data</artifactId>
      <version>${geotools.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>xmlunit</groupId>
      <artifactId>xmlunit</artifactId>
      <version>1.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.easymock</groupId>
      <artifactId>easymock</artifactId>
      <version>2.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.easymock</groupId>
      <artifactId>easymockclassextension</artifactId>
      <version>2.3</version>
      <scope>test</scope>
    </dependency>    
    
    <!-- Jetty runner dependencies -->
    <dependency>
      <groupId>org.mortbay.jetty</groupId>
      <artifactId>jetty</artifactId>
      <version>${jetty.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mortbay.jetty</groupId>
      <artifactId>jetty-naming</artifactId>
      <version>${jetty.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mortbay.jetty</groupId>
      <artifactId>jetty-plus</artifactId>
      <version>${jetty.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  
  <properties>
    <geotools.version>13-SNAPSHOT</geotools.version>
    <geoserver.version>2.7-SNAPSHOT</geoserver.version>
    <jetty.version>6.1.8</jetty.version>
    <gsgeogit.version>2.5-SNAPSHOT</gsgeogit.version> <!-- 2.5.1 build not available so using snapshot http://repo.opengeo.org/org/opengeo/geoserver/gs-geogit/ -->  
    <maven.test.search.classdir>true</maven.test.search.classdir>
  </properties>
  
  <profiles>
    <profile>
      <id>arcsde</id>
      <dependencies>
        <dependency>
          <groupId>org.geoserver.extension</groupId>
          <artifactId>arcsde</artifactId>
          <version>${geoserver.version}</version>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>sdeLibs</id>
      <dependencies>
        <dependency>
          <groupId>com.esri</groupId>
          <artifactId>jsde_sdk</artifactId>
          <version>${sde.version}</version>
        </dependency>
        <dependency>
          <groupId>com.esri</groupId>
          <artifactId>jpe_sdk</artifactId>
          <version>${sde.version}</version>
        </dependency>
      </dependencies>
    </profile>
   </profiles>
  <build>
    <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
         <configuration>
           <source>1.7</source>
           <target>1.7</target>
           <debug>true</debug>
           <encoding>UTF-8</encoding>
           <!-- 
               On the win32 build box the compiler oom's due to the compiler accumulating
               too many classes in the permanent generation, similar to GEOT-2462  
           -->
           <fork>${fork.javac}</fork> 
           <maxmem>${javac.maxHeapSize}</maxmem>
         </configuration>
       </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
            <argLine>-XX:MaxPermSize=256m</argLine>
        </configuration>
      </plugin>
      
       <!-- resources -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
         <version>2.6</version>
         <configuration>
           <encoding>UTF-8</encoding>
         </configuration>
       </plugin>

      <plugin>
        <groupId>org.mortbay.jetty</groupId>
        <artifactId>maven-jetty-plugin</artifactId>
        <version>6.1.10</version>
        <configuration>
          <stopPort>8890</stopPort>
          <stopKey>geonode-stop</stopKey>
          <scanIntervalSeconds>30</scanIntervalSeconds>
          <contextPath>/geoserver</contextPath>
          
          <webApp>${project.build.directory}/geoserver</webApp>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>2.3</version>
        <configuration>
          <descriptors>
            <descriptor>assembly.xml</descriptor>
            <descriptor>data.xml</descriptor>
          </descriptors>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <configuration>
          <warName>geoserver</warName> 
          <webappDirectory>${project.build.directory}/geoserver</webappDirectory>
          <packagingExcludes>**/data/</packagingExcludes>
          <packagingExcludes>**/gs-web-app*.jar</packagingExcludes>
        </configuration>
        <executions>
            <execution>
                <phase>package</phase>
                <goals>
                    <goal>war</goal>
                </goals>
            </execution>
        </executions>
      </plugin>

      <!-- plugin>
        <inherited>true</inherited>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.3</version>
        <configuration>
            <warName>geoserver</warName>
            <webappDirectory>${project.build.directory}/geoserver</webappDirectory>
            <packagingExcludes>**/data/</packagingExcludes>
            <packagingExcludes>**/gs-web-app*.jar</packagingExcludes>
            <packagingExcludes>WEB-INF/lib/servlet-api*.jar</packagingExcludes>
            <archive>
                <manifest>
                    <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                    <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                </manifest>
                <manifestEntries>
                    <GeoServerModule>core</GeoServerModule>
                    <Application-Name>${project.build.finalname}</Application-Name>
                    <Project-Version>${project.version}</Project-Version>
                    <Iteration-Name>${iteration}</Iteration-Name>
                    <Build-Timestamp>${maven.build.timestamp}</Build-Timestamp>
                    <Git-Revision>${build.commit.id}</Git-Revision>
                </manifestEntries>
            </archive>
        </configuration>
        <executions>
            <execution>
                <phase>package</phase>
                <goals>
                    <goal>war</goal>
                </goals>
            </execution>
        </executions>
    </plugin -->
      
       <!-- code coverage -->
       <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>cobertura-maven-plugin</artifactId>
        <executions>
         <execution>
          <goals>
           <goal>clean</goal>
          </goals>
         </execution>
        </executions>
       </plugin>

       <!-- eclipse ide integration -->
       <plugin>
        <artifactId>maven-eclipse-plugin</artifactId>
        <version>2.4</version>
        <configuration>
         <!--downloadSources>true</downloadSources-->
         <additionalProjectnatures>
          <projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
         </additionalProjectnatures>
        </configuration>
       </plugin>

       <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.4</version>
        <executions>
            <execution>
                <phase>package</phase>
                <goals>
                    <goal>test-jar</goal>
                </goals>
            </execution>
        </executions>
        <configuration>
            <archive>
                <manifest>
                    <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                    <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                </manifest>
                <manifestEntries>
                    <GeoServerModule>core</GeoServerModule>
                    <Application-Name>${project.build.finalname}</Application-Name>
                    <Project-Version>${project.version}</Project-Version>
                    <Iteration-Name>${iteration}</Iteration-Name>
                    <Build-Timestamp>${maven.build.timestamp}</Build-Timestamp>
                    <Git-Revision>${build.commit.id}</Git-Revision>
                </manifestEntries>
            </archive>
        </configuration>
       </plugin>

       <plugin>
        <inherited>true</inherited>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.2.1</version>
        <configuration>
         <attach>true</attach>
        </configuration>
        <executions>
         <execution>
          <id>attach-sources</id>
          <goals>
           <goal>jar</goal>
           <goal>test-jar</goal>
          </goals>
         </execution>
        </executions>
       </plugin>

       <!-- initialize git revision info -->
       <plugin>
         <groupId>pl.project13.maven</groupId>
         <artifactId>git-commit-id-plugin</artifactId>
         <version>2.0.4</version>
         <executions>
           <execution>
             <goals>
               <goal>revision</goal>
             </goals>
           </execution>
         </executions>
         <configuration>
           <prefix>build</prefix>
           <failOnNoGitDirectory>false</failOnNoGitDirectory>
           <skipPoms>false</skipPoms>
           <verbose>false</verbose>
         </configuration>
       </plugin>

      </plugins>

      <extensions>
        <extension>
          <groupId>org.apache.maven.wagon</groupId>
          <artifactId>wagon-webdav</artifactId>
          <version>1.0-beta-2</version>
        </extension>
      </extensions>

  </build>
</project>

